@@ -101,6 +101,17 @@ if ($_POST) {
 			$input_errors[] = "This IPv6 address already exists.";
 			break;
 		}
+		
+		/* check for duplicate MAC address entries with the same protocol family */
+		if ($_POST['mac'] && $mapent['mac'] == $_POST['mac']) {
+			if (is_ipaddr($mapent['ipaddr']) && is_ipaddr($_POST['ipaddr'])) {
+				$input_errors[] = "An IPv4 mapping for this MAC address already exists.";
+				break;
+			} else if (is_ipaddr6($mapent['ipaddr']) && is_ipaddr6($_POST['ipaddr'])) {
+				$input_errors[] = "An IPv6 mapping for this MAC address already exists.";
+				break;
+			}
+		}
 	}
 		
 	/* make sure it's not within the dynamic subnet */
